--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,10 @@
-*
-	box-sizing: border-box;
+box-sizing: border-box
+	// Basic settings of grid
+@import"grid"
+//Fonts settings
+	@import"fonts"
+//Interface settings
+	@import"interface"
+
+	// Header 
+		@import "blocks/navbar"
