--- a/css/_grid.css
+++ b/css/_grid.css
@@ -1,13 +1,11 @@
-.header {
-  background-color: #fff;
-}
-
-.header * {
+* {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-.header .container {
+.container {
   max-width: 1170px;
   margin: auto;
 }
+
+/*# sourceMappingURL=_grid.css.map */
