Экран и шапка без адаптива

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,10 +1,14 @@
-box-sizing: border-box
-	// Basic settings of grid
-@import"grid"
+// Basic settings of grid
+@import 'grid'
 //Fonts settings
-	@import"fonts"
+@import 'fonts'
+//Text-color settings
+@import 'colors'
 //Interface settings
-	@import"interface"
+@import 'interface'
 
-	// Header 
-		@import "blocks/navbar"
+// Header 
+@import 'blocks/navbar'
+// hero block
+@import 'blocks/hero'
+
