--- a/css/_grid.css
+++ b/css/_grid.css
@@ -1,11 +1,11 @@
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 .container {
   max-width: 1170px;
-  margin: auto;
-}
+  margin: auto; }
+
+
 
 /*# sourceMappingURL=_grid.css.map */
