--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,16 @@
   max-width: 1170px;
   margin: auto; }
 
+@media (max-width: 1199px) {
+  .container {
+    max-width: 960px; } }
+@media (max-width: 991px) {
+  .container {
+    max-width: 750px; } }
+@media (max-width: 768px) {
+  .container {
+    max-width: 100%;
+    padding: 0 20px; } }
 @font-face {
   font-family: 'Proxima Nova Semibold';
   src: url("../fonts/ProximaNova-Semibold.eot");
@@ -28,7 +38,8 @@ body {
   font-size: 12px;
   text-transform: uppercase;
   color: #507fe1;
-  font-family: "Proxima Nova Semibold", sans-serif; }
+  font-family: "Proxima Nova Semibold", sans-serif;
+  background-color: #fff; }
 
 .button {
   border: none;
@@ -38,6 +49,9 @@ body {
   color: #fff;
   font-family: "Proxima Nova Semibold", sans-serif; }
 
+@media (max-width: 576px) {
+  .button-o {
+    font-size: 10px; } }
 .navbar {
   position: fixed;
   left: 0;
@@ -81,8 +95,8 @@ body {
   background-color: #507fe1;
   -webkit-transition: 0.2s;
   transition: 0.2s;
-  -webkit-transform: translateY(0%);
-  transform: translateY(0%); }
+  -webkit-transform: translateY(-200%);
+  transform: translateY(-200%); }
   .menu_active {
     -webkit-transform: translateY(0);
     transform: translateY(0); }
@@ -138,6 +152,24 @@ body {
   display: block;
   color: #7b7b79; }
 
+@media (max-width: 991px) {
+  .navbar__mobile, .navbar__landline {
+    display: none; } }
+@media (max-width: 576px) {
+  .logo {
+    display: none; }
+
+  .menu {
+    top: 80px; }
+    .menu-button {
+      height: 60px; }
+    .menu__nav {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+    .menu__link {
+      margin-bottom: 20px; } }
 .hero {
   background: #f1f1f1 url("../img/hero/hero-bg.jpg") no-repeat center top;
   background-size: cover;
@@ -152,5 +184,10 @@ body {
     font-size: 30px;
     font-family: "Proxima Nova Semibold", sans-serif;
     margin-bottom: 67px; }
+
+@media (max-width: 991px) {
+  .hero {
+    background-size: cover;
+    background-position: top left 30%; } }
 
 
