--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -12,4 +12,7 @@
 		font-size: 30px
 		+bold
 		margin-bottom: 67px
-
+@media (max-width: 991px)
+	.hero
+		background-size: cover
+		background-position: top left 30%
