--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -35,7 +35,7 @@
 	padding: 16px 0
 	background-color: $primary
 	transition: 0.2s
-	transform: translateY(0%)
+	transform: translateY(-200%)
 	&_active
 		transform: translateY(0)
 	&__nav
@@ -76,5 +76,25 @@
 		font-size: 14px
 		display: block
 		color: $text-color-light
+@media (max-width: 991px)
+	
+	.navbar
+		&__mobile, &__landline
+			display: none
+@media (max-width: 576px)
+	.logo
+			display: none
+	.menu
+		top: 80px
 
+		&-button
+			height: 60px
+		&__nav
+			flex-direction: column
+		&__link
+			margin-bottom: 20px
+			
+			
+		
+			
 
