--- a/css/style.css
+++ b/css/style.css
@@ -96,10 +96,12 @@ body {
   -webkit-transition: 0.2s;
   transition: 0.2s;
   -webkit-transform: translateY(-200%);
-  transform: translateY(-200%); }
+  transform: translateY(-200%);
+  opacity: 0; }
   .menu_active {
     -webkit-transform: translateY(0);
-    transform: translateY(0); }
+    transform: translateY(0);
+    opacity: 1; }
   .menu__nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -173,8 +175,9 @@ body {
 .hero {
   background: #f1f1f1 url("../img/hero/hero-bg.jpg") no-repeat center top;
   background-size: cover;
-  padding-top: 200px;
-  padding-bottom: 270px; }
+  padding-top: 120px;
+  padding-bottom: 270px;
+  margin-top: 80px; }
   .hero__title {
     max-width: 262px;
     font-size: 30px;
@@ -187,7 +190,7 @@ body {
 
 @media (max-width: 991px) {
   .hero {
-    background-size: cover;
-    background-position: top left 30%; } }
+    background-size: 100%;
+    background-position: bottom left; } }
 
 
