--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,8 +1,9 @@
 .hero
 	background: #f1f1f1 url('../img/hero/hero-bg.jpg') no-repeat center top 
 	background-size: cover
-	padding-top: 200px
+	padding-top: 120px
 	padding-bottom: 270px
+	margin-top: 80px
 	&__title
 		max-width: 262px
 		font-size: 30px
@@ -11,8 +12,8 @@
 		display: block
 		font-size: 30px
 		+bold
-		margin-bottom: 67px
+			margin-bottom: 67px
 @media (max-width: 991px)
 	.hero
-		background-size: cover
-		background-position: top left 30%
+		background-size: 100%
+		background-position: bottom left
