--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -36,8 +36,10 @@
 	background-color: $primary
 	transition: 0.2s
 	transform: translateY(-200%)
+	opacity: 0
 	&_active
 		transform: translateY(0)
+		opacity: 1
 	&__nav
 		display: flex
 		align-items: center
@@ -77,7 +79,7 @@
 		display: block
 		color: $text-color-light
 @media (max-width: 991px)
-	
+
 	.navbar
 		&__mobile, &__landline
 			display: none
