--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -17,7 +17,7 @@
 		display: block
 		margin-bottom: 5px
 		font-size: 19px
-		+bold
+		font-family: 'Proxima Nova Semibold', sans-serif
 		text-decoration: none
 		color: $text-color
 	&__small-text
@@ -73,7 +73,7 @@
 		margin-bottom: 5px
 		font-size: 18px
 		text-transform: uppercase
-		+bold
+		font-family: 'Proxima Nova Semibold', sans-serif
 	&__description
 		font-size: 14px
 		display: block
