--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,7 +1,8 @@
+
 // Basic settings of grid
 @import 'grid'
 //Fonts settings
-@import 'fonts'
+
 //Text-color settings
 @import 'colors'
 //Interface settings
@@ -11,4 +12,6 @@
 @import 'blocks/navbar'
 // hero block
 @import 'blocks/hero'
+// offer block
+@import 'blocks/offer'
 
