--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,33 @@
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .container {
   max-width: 1170px;
-  margin: auto; }
+  margin: auto;
+}
 
 @media (max-width: 1199px) {
   .container {
-    max-width: 960px; } }
+    max-width: 960px;
+  }
+}
 @media (max-width: 991px) {
   .container {
-    max-width: 750px; } }
+    max-width: 750px;
+  }
+}
 @media (max-width: 768px) {
   .container {
     max-width: 100%;
-    padding: 0 20px; } }
-@font-face {
-  font-family: 'Proxima Nova Semibold';
-  src: url("../fonts/ProximaNova-Semibold.eot");
-  src: url("../fonts/ProximaNova-Semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Semibold.woff") format("woff"), url("../fonts/ProximaNova-Semibold.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal; }
-@font-face {
-  font-family: 'Proxima Nova Light';
-  src: url("../fonts/ProximaNova-Light.eot");
-  src: url("../fonts/ProximaNova-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Light.woff") format("woff"), url("../fonts/ProximaNova-Light.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal; }
+    padding: 0 20px;
+  }
+}
 body {
   font-family: "Proxima Nova Light", sans-serif;
-  color: #262626; }
+  color: #262626;
+}
 
 .button-o {
   border: 2px solid #507fe1;
@@ -39,7 +36,8 @@ body {
   text-transform: uppercase;
   color: #507fe1;
   font-family: "Proxima Nova Semibold", sans-serif;
-  background-color: #fff; }
+  background-color: #fff;
+}
 
 .button {
   border: none;
@@ -47,43 +45,87 @@ body {
   padding: 25px 45px;
   background-color: #507fe1;
   color: #fff;
-  font-family: "Proxima Nova Semibold", sans-serif; }
+  font-family: "Proxima Nova Senibold", sans-serif;
+}
 
-@media (max-width: 576px) {
-  .button-o {
-    font-size: 10px; } }
+.bg-secondary {
+  background: #f1f1f1;
+}
+
+.input {
+  height: 80px;
+  padding-left: 30px;
+  border: 1px solid #dddddd;
+}
+
+.checkbox {
+  display: none;
+}
+.checkbox:checked + label:before {
+  background-color: #507fe1;
+}
+
+.checkbox-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-right: 42px;
+}
+.checkbox-label:hover {
+  cursor: pointer;
+}
+.checkbox-label:before {
+  content: "";
+  width: 30px;
+  height: 30px;
+  border: 1px solid #dddddd;
+  margin-right: 20px;
+}
+
+.button-o {
+  font-size: 10px;
+}
+
 .navbar {
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   background-color: #fff;
-  z-index: 99; }
-  .navbar-wrap {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    min-height: 80px; }
-  .navbar__mobile, .navbar__landline {
-    text-align: right; }
-  .navbar__phone {
-    display: block;
-    margin-bottom: 5px;
-    font-size: 19px;
-    font-family: "Proxima Nova Semibold", sans-serif;
-    text-decoration: none;
-    color: #262626; }
-  .navbar__small-text {
-    display: block;
-    font-size: 14px;
-    color: #7b7b79;
-    text-decoration: none; }
+  z-index: 99;
+}
+.navbar-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  min-height: 80px;
+}
+.navbar__mobile, .navbar__landline {
+  text-align: right;
+}
+.navbar__phone {
+  display: block;
+  margin-bottom: 5px;
+  font-size: 19px;
+  font-family: "Proxima Nova Semibold", sans-serif;
+  text-decoration: none;
+  color: #262626;
+}
+.navbar__small-text {
+  display: block;
+  font-size: 14px;
+  color: #7b7b79;
+  text-decoration: none;
+}
 
 .menu {
   position: fixed;
@@ -94,103 +136,224 @@ body {
   padding: 16px 0;
   background-color: #507fe1;
   -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
   transition: 0.2s;
   -webkit-transform: translateY(-200%);
+  -ms-transform: translateY(-200%);
   transform: translateY(-200%);
-  opacity: 0; }
-  .menu_active {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    opacity: 1; }
-  .menu__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-pack: distribute;
-    justify-content: space-around; }
-  .menu__link {
-    text-decoration: none;
-    font-size: 17px;
-    text-transform: uppercase;
-    color: #fff; }
-  .menu-button {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    background-color: transparent;
-    border: none;
-    border-right: 1px solid rgba(81, 11, 186, .1);
-    border-left: 1px solid rgba(81, 11, 186, .1);
-    height: 80px;
-    width: 70px; }
-    .menu-button__line {
-      display: block;
-      width: 20px;
-      height: 3px;
-      background-color: #89a9eb;
-      margin: 2px 0; }
+  opacity: 0;
+}
+.menu_active {
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  opacity: 1;
+}
+.menu__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+}
+.menu__link {
+  text-decoration: none;
+  font-size: 17px;
+  text-transform: uppercase;
+  color: #fff;
+}
+.menu-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: transparent;
+  border: none;
+  border-right: 1px solid rgba(81, 11, 186, 0.1);
+  border-left: 1px solid rgba(81, 11, 186, 0.1);
+  height: 80px;
+  width: 70px;
+}
+.menu-button__line {
+  display: block;
+  width: 20px;
+  height: 3px;
+  background-color: #89a9eb;
+  margin: 2px 0;
+}
 
 .logo__text {
   display: block;
   margin-bottom: 5px;
   font-size: 18px;
   text-transform: uppercase;
-  font-family: "Proxima Nova Semibold", sans-serif; }
+  font-family: "Proxima Nova Semibold", sans-serif;
+}
 .logo__description {
   font-size: 14px;
   display: block;
-  color: #7b7b79; }
+  color: #7b7b79;
+}
 
 @media (max-width: 991px) {
   .navbar__mobile, .navbar__landline {
-    display: none; } }
+    display: none;
+  }
+}
 @media (max-width: 576px) {
   .logo {
-    display: none; }
+    display: none;
+  }
 
   .menu {
-    top: 80px; }
-    .menu-button {
-      height: 60px; }
-    .menu__nav {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column; }
-    .menu__link {
-      margin-bottom: 20px; } }
+    top: 80px;
+  }
+  .menu-button {
+    height: 60px;
+  }
+  .menu__nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+  .menu__link {
+    margin-bottom: 20px;
+  }
+}
 .hero {
   background: #f1f1f1 url("../img/hero/hero-bg.jpg") no-repeat center top;
   background-size: cover;
   padding-top: 120px;
   padding-bottom: 270px;
-  margin-top: 80px; }
-  .hero__title {
-    max-width: 262px;
-    font-size: 30px;
-    margin-bottom: 40px; }
-  .hero__subtitle {
-    display: block;
-    font-size: 30px;
-    font-family: "Proxima Nova Semibold", sans-serif;
-    margin-bottom: 67px; }
+  margin-top: 80px;
+}
+.hero__title {
+  max-width: 262px;
+  font-size: 30px;
+  margin-bottom: 40px;
+}
+.hero__subtitle {
+  display: block;
+  font-size: 30px;
+  font-family: "Proxima Nova Semibold", sans-serif;
+  font-family-margin-bottom: 67px;
+}
 
 @media (max-width: 991px) {
   .hero {
     background-size: 100%;
-    background-position: bottom left; } }
+    background-position: bottom left;
+  }
+}
+.offer {
+  padding: 129px 0;
+}
+.offer-block {
+  background: #fff url("../img/offer/form-bg.png") no-repeat center right;
+  background-size: contain;
+  -webkit-box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+  padding: 80px;
+  margin-top: -240px;
+}
+.offer__title {
+  font-size: 25px;
+  text-transform: uppercase;
+  font-family: "Proxima Nova Semibold", sans-serif;
+  font-family-margin-bottom: 20px;
+}
+.offer__subtitle {
+  display: block;
+  font-size: 21px;
+  margin-bottom: 48px;
+}
+
+.form__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  max-width: 900px;
+  margin-bottom: 25px;
+}
+.form__row:last-child {
+  margin-bottom: 0;
+}
+.form__label {
+  display: block;
+  font-size: 17px;
+  margin-bottom: 15px;
+}
+.form__group {
+  -ms-flex-preferred-size: 33.33%;
+  flex-basis: 33.33%;
+}
+.form__input {
+  width: 100%;
+  border-right-width: 0;
+}
+.form__input:last-child {
+  border-right-width: 1px;
+}
+.form__button {
+  height: 80px;
+  width: 100%;
+}
+
+@media (max-width: 1199px) {
+  .offer-block {
+    background-position: center right -120px;
+  }
+}
+@media (max-width: 768px) {
+  .offer-block {
+    background: none;
+    background-color: #fff;
+    padding: 40px;
+  }
+  .offer__title {
+    font-size: 18px;
+  }
+  .offer__subtitle {
+    font-size: 16px;
+  }
+}
+.form__row {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.form__row-checkbox {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+}
+.form__group {
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%;
+  width: 100%;
+}
+.form__input {
+  margin-bottom: 20px;
+}
 
 
+
+/*# sourceMappingURL=style.css.map */
