--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,21 +1,45 @@
+
 body
-	+light
-		color: $text-color
+  font-family: 'Proxima Nova Light', sans-serif
+  color: $text-color
 .button-o
-	border: 2px solid $primary
-	padding: 17px 22px
-	font-size: 12px
-	text-transform: uppercase
-	color: $primary
-	+bold
-		background-color: #fff
+  border: 2px solid $primary
+  padding: 17px 22px
+  font-size: 12px
+  text-transform: uppercase
+  color: $primary
+  font-family: 'Proxima Nova Semibold', sans-serif
+  background-color: #fff
 .button
-	border: none
-	text-transform: uppercase
-	padding: 25px 45px
-	background-color: $primary
-	color: #fff
-	+bold
+  border: none
+  text-transform: uppercase
+  padding: 25px 45px
+  background-color: $primary
+  color: #fff
+  font-family: 'Proxima Nova Senibold', sans-serif
+.bg-secondary
+  background: $bg-secondary
+.input
+  height: 80px
+  padding-left: 30px 
+  border: 1px solid #dddddd
+.checkbox
+  display: none
+  &:checked + label:before
+      background-color: $primary
+.checkbox
+  &-label
+    display: flex
+    align-items: center
+    margin-right: 42px
+    &:hover
+      cursor: pointer
+    &:before
+      content: ''
+      width: 30px
+      height: 30px
+      border: 1px solid #dddddd
+      margin-right: 20px
 @media (max-width: 576px)
-	.button-o
-		font-size: 10px
+.button-o
+  font-size: 10px
