Сверстан блок с преимуществами. Сделан адаптив.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 * {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -25,8 +24,21 @@
   }
 }
 body {
-  font-family: "Proxima Nova Light", sans-serif;
+  font-family: "ProximaNova Light", sans-serif;
   color: #262626;
+}
+
+.section {
+  padding: 140px 0;
+}
+.section-title {
+  font-size: 30px;
+  font-family: "ProximaNova Semibold", sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+}
+.section__title {
+  margin-bottom: 100px;
 }
 
 .button-o {
@@ -35,7 +47,7 @@ body {
   font-size: 12px;
   text-transform: uppercase;
   color: #507fe1;
-  font-family: "Proxima Nova Semibold", sans-serif;
+  font-family: "ProximaNova Semibold", sans-serif;
   background-color: #fff;
 }
 
@@ -45,7 +57,7 @@ body {
   padding: 25px 45px;
   background-color: #507fe1;
   color: #fff;
-  font-family: "Proxima Nova Senibold", sans-serif;
+  font-family: "ProximaNova Semibold", sans-serif;
 }
 
 .bg-secondary {
@@ -66,11 +78,7 @@ body {
 }
 
 .checkbox-label {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-right: 42px;
 }
@@ -89,6 +97,13 @@ body {
   font-size: 10px;
 }
 
+.section {
+  padding: 60px;
+}
+.section-title {
+  font-size: 24px;
+}
+
 .navbar {
   position: fixed;
   left: 0;
@@ -98,14 +113,8 @@ body {
   z-index: 99;
 }
 .navbar-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   min-height: 80px;
 }
@@ -116,7 +125,7 @@ body {
   display: block;
   margin-bottom: 5px;
   font-size: 19px;
-  font-family: "Proxima Nova Semibold", sans-serif;
+  font-family: "ProximaNova Semibold", sans-serif;
   text-decoration: none;
   color: #262626;
 }
@@ -135,28 +144,17 @@ body {
   width: 100%;
   padding: 16px 0;
   background-color: #507fe1;
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
   transition: 0.2s;
-  -webkit-transform: translateY(-200%);
-  -ms-transform: translateY(-200%);
   transform: translateY(-200%);
   opacity: 0;
 }
 .menu_active {
-  -webkit-transform: translateY(0);
-  -ms-transform: translateY(0);
   transform: translateY(0);
   opacity: 1;
 }
 .menu__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -ms-flex-pack: distribute;
   justify-content: space-around;
 }
 .menu__link {
@@ -166,18 +164,9 @@ body {
   color: #fff;
 }
 .menu-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   background-color: transparent;
   border: none;
@@ -199,7 +188,7 @@ body {
   margin-bottom: 5px;
   font-size: 18px;
   text-transform: uppercase;
-  font-family: "Proxima Nova Semibold", sans-serif;
+  font-family: "ProximaNova Semibold", sans-serif;
 }
 .logo__description {
   font-size: 14px;
@@ -224,9 +213,6 @@ body {
     height: 60px;
   }
   .menu__nav {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
   }
   .menu__link {
@@ -248,7 +234,7 @@ body {
 .hero__subtitle {
   display: block;
   font-size: 30px;
-  font-family: "Proxima Nova Semibold", sans-serif;
+  font-family: "ProximaNova Semibold", sans-serif;
   font-family-margin-bottom: 67px;
 }
 
@@ -264,7 +250,6 @@ body {
 .offer-block {
   background: #fff url("../img/offer/form-bg.png") no-repeat center right;
   background-size: contain;
-  -webkit-box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
   padding: 80px;
   margin-top: -240px;
@@ -282,11 +267,7 @@ body {
 }
 
 .form__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   max-width: 900px;
   margin-bottom: 25px;
@@ -300,7 +281,6 @@ body {
   margin-bottom: 15px;
 }
 .form__group {
-  -ms-flex-preferred-size: 33.33%;
   flex-basis: 33.33%;
 }
 .form__input {
@@ -334,19 +314,12 @@ body {
   }
 }
 .form__row {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
 }
 .form__row-checkbox {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
   flex-direction: row;
 }
 .form__group {
-  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   width: 100%;
 }
@@ -354,6 +327,27 @@ body {
   margin-bottom: 20px;
 }
 
+.features-block {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.features-block__item {
+  flex-basis: 33%;
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+@media(max-width: 991px) {
+  .features-block__item {
+    flex-basis: 50%;
+  }
+}
+@media(max-width: 768px) {
+  .features-block__item {
+    flex-basis: 100%;
+    margin-bottom: 50px;
+  }
+}
 
 
-/*# sourceMappingURL=style.css.map */
