--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,7 +2,7 @@
 // Basic settings of grid
 @import 'grid'
 //Fonts settings
-
+//@import 'fonts'
 //Text-color settings
 @import 'colors'
 //Interface settings
@@ -14,4 +14,6 @@
 @import 'blocks/hero'
 // offer block
 @import 'blocks/offer'
+// features block
+@import 'blocks/features'
 
