--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,14 +1,23 @@
 
 body
-  font-family: 'Proxima Nova Light', sans-serif
+  font-family: 'ProximaNova Light', sans-serif
   color: $text-color
+.section
+  padding: 140px 0
+  &-title
+    font-size: 30px
+    font-family: 'ProximaNova Semibold', sans-serif
+    text-align: center
+    text-transform: uppercase
+  &__title
+    margin-bottom: 100px
 .button-o
   border: 2px solid $primary
   padding: 17px 22px
   font-size: 12px
   text-transform: uppercase
   color: $primary
-  font-family: 'Proxima Nova Semibold', sans-serif
+  font-family: 'ProximaNova Semibold', sans-serif
   background-color: #fff
 .button
   border: none
@@ -16,7 +25,7 @@ body
   padding: 25px 45px
   background-color: $primary
   color: #fff
-  font-family: 'Proxima Nova Senibold', sans-serif
+  font-family: 'ProximaNova Semibold', sans-serif
 .bg-secondary
   background: $bg-secondary
 .input
@@ -43,3 +52,7 @@ body
 @media (max-width: 576px)
 .button-o
   font-size: 10px
+.section
+  padding: 60px
+  &-title
+    font-size: 24px
