--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -11,7 +11,7 @@
 	&__subtitle
 		display: block
 		font-size: 30px
-		font-family: 'Proxima Nova Semibold', sans-serif
+		font-family: 'ProximaNova Semibold', sans-serif
 			margin-bottom: 67px
 @media (max-width: 991px)
 	.hero
