Блок со статьями и каталог, адаптированы

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,12 @@
   }
 }
 body {
-  font-family: "ProximaNova Light", sans-serif;
+  font-family: "Proxima Nova Light", sans-serif;
   color: #262626;
+}
+
+img {
+  max-width: 100%;
 }
 
 .section {
@@ -47,17 +51,31 @@ body {
   font-size: 12px;
   text-transform: uppercase;
   color: #507fe1;
-  font-family: "ProximaNova Semibold", sans-serif;
+  font-family: "Proxima Nova Semibold", sans-serif;
   background-color: #fff;
 }
 
 .button {
+  text-decoration: none;
   border: none;
   text-transform: uppercase;
   padding: 25px 45px;
   background-color: #507fe1;
   color: #fff;
-  font-family: "ProximaNova Semibold", sans-serif;
+  font-family: "Proxima Nova Semibold", sans-serif;
+}
+.button-fitting {
+  color: #507fe1;
+  background-color: #fff;
+}
+.button-add {
+  background-color: #7c9fe8;
+  color: #fff;
+}
+.button-like {
+  height: 30px;
+  width: 30px;
+  border: none;
 }
 
 .bg-secondary {
@@ -347,6 +365,114 @@ body {
   .features-block__item {
     flex-basis: 100%;
     margin-bottom: 50px;
+  }
+}
+.catalog {
+  background-color: #f5f6f8;
+}
+.catalog-block {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.catalog__card {
+  margin-bottom: 30px;
+}
+.catalog-card {
+  max-width: 570px;
+  position: relative;
+  box-shadow: 7px 5px 21px rgba(0, 0, 0, 0.1);
+}
+.catalog-card__tag {
+  position: absolute;
+  padding: 10px;
+  top: 10px;
+  left: 10px;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: rgba(80, 127, 225, 0.6);
+}
+.catalog-card__buttons {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.catalog-card__button {
+  font-size: 11px;
+  border: none;
+  text-transform: uppercase;
+  padding: 10px;
+  height: 30px;
+}
+.catalog-card__image {
+  display: block;
+}
+.catalog__link {
+  text-align: center;
+  margin-top: 60px;
+}
+.catalog__link-more {
+  display: inline-block;
+  margin-bottom: 24px;
+}
+.catalog__description {
+  display: block;
+}
+
+@media (max-width: 1199px) {
+  .catalog-block {
+    justify-content: center;
+  }
+  .catalog-card {
+    max-width: 470px;
+  }
+}
+.blog__heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 70px;
+}
+.blog__title {
+  font-size: 24px;
+  font-family: "Proxima Nova Semibold", sans-serif;
+}
+.blog__link-more {
+  color: #507fe1;
+  font-size: 16px;
+}
+.blog-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.blog-list__image {
+  width: 200px;
+  max-height: 160px;
+  overflow: hidden;
+}
+.blog-list__text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 80px;
+}
+.blog-list__card {
+  margin-bottom: 40px;
+}
+.blog-card {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.08);
+}
+
+@media (max-width: 1199px) {
+  .blog-list {
+    justify-content: space-around;
+  }
+  .blog-card {
+    margin-right: 30px;
+    margin-left: 30px;
   }
 }
 
