--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,4 +16,8 @@
 @import 'blocks/offer'
 // features block
 @import 'blocks/features'
+// catalog block
+@import 'blocks/catalog'
+//blog block
+@import 'blocks/blog-list'
 
