Добавлен блок с ценами, плюс адаптив

--- a/css/offer.css
+++ b/css/offer.css
@@ -107,4 +107,18 @@
 .form__input {
   margin-bottom: 20px;
 }
+
+.form__row {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.form__row-checkbox {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
 /*# sourceMappingURL=offer.css.map */
