--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -29,6 +29,8 @@ img
   background-color: $primary
   color: #fff
   font-family: 'Proxima Nova Semibold', sans-serif
+  &:hover
+    cursor: pointer
   &-fitting
     color: $primary
     background-color: #fff
@@ -63,7 +65,9 @@ img
       border: 1px solid #dddddd
       margin-right: 20px
 @media (max-width: 576px)
-.button-o
+.button
+  font-size: 10px
+  &-o
   font-size: 10px
 .section
   padding: 60px
