--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@ img {
   color: #fff;
   font-family: "Proxima Nova Semibold", sans-serif;
 }
+.button:hover {
+  cursor: pointer;
+}
 .button-fitting {
   color: #507fe1;
   background-color: #fff;
@@ -111,7 +114,8 @@ img {
   margin-right: 20px;
 }
 
-.button-o {
+.button {
+  font-size: 10px;
   font-size: 10px;
 }
 
@@ -345,6 +349,14 @@ img {
   margin-bottom: 20px;
 }
 
+.form__row-checkbox {
+  flex-direction: column;
+  align-items: flex-start;
+}
+.form__checkbox {
+  margin-bottom: 20px;
+}
+
 .features-block {
   display: flex;
   justify-content: space-between;
@@ -473,6 +485,64 @@ img {
   .blog-card {
     margin-right: 30px;
     margin-left: 30px;
+  }
+}
+.price-block {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.price-block__card {
+  margin-bottom: 10px;
+}
+.price-card {
+  background-color: #fff;
+  position: relative;
+}
+.price-card__text {
+  padding: 20px;
+  font-size: 15px;
+}
+.price-card__title {
+  margin: 0;
+  font-weight: 400;
+}
+.price-card__cost {
+  font-family: "ProximaNova Semibold", sans-serif;
+  font-weight: 700;
+}
+.price-card__pricetag {
+  display: flex;
+  justify-content: space-between;
+}
+.price-card__button {
+  text-align: center;
+  position: absolute;
+  z-index: -1;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+  height: 80px;
+  padding: 0 20px 20px 20px;
+}
+.price-card:hover .price-card__button {
+  z-index: 99;
+  bottom: -80px;
+}
+
+@media (max-width: 991px) {
+  .price-block {
+    justify-content: center;
+  }
+  .price-block__card {
+    margin: 12px;
+  }
+}
+@media (max-width: 400px) {
+  .price-block__card {
+    margin: 10px;
   }
 }
 
