--- a/css/style.css
+++ b/css/style.css
@@ -532,7 +532,7 @@ img {
   bottom: -80px;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .price-block {
     justify-content: center;
   }
@@ -543,6 +543,58 @@ img {
 @media (max-width: 400px) {
   .price-block__card {
     margin: 10px;
+  }
+}
+.step {
+  position: relative;
+  text-align: center;
+}
+.step__title {
+  font-size: 18px;
+}
+.step:last-child:before {
+  display: none;
+}
+.step:before {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: rgba(126, 123, 120, 0.2);
+  display: block;
+  position: absolute;
+  top: 18%;
+  right: -63%;
+}
+.step__text {
+  max-width: 160px;
+  margin: auto;
+  margin-bottom: 30px;
+}
+.steps {
+  background-color: #f1f1f1;
+}
+.steps-block {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 991px) {
+  .step {
+    width: 33%;
+  }
+  .step:before {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .step {
+    width: 50%;
+  }
+}
+@media (max-width: 464px) {
+  .step {
+    width: 100%;
   }
 }
 
