--- a/sass/style.sass
+++ b/sass/style.sass
@@ -24,4 +24,8 @@
 @import 'blocks/price'
 //steps block
 @import 'blocks/steps'
+//reviews block
+@import 'blocks/reviews'
+//factory block
+@import 'blocks/factory'
 
