--- a/sass/blocks/_offer.sass
+++ b/sass/blocks/_offer.sass
@@ -1,11 +1,15 @@
 .offer
 	padding: 129px 0
 	&-block 
-		background: #fff url('../img/offer/form-bg.png') no-repeat center right
-		background-size: contain
 		box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1)
 		padding: 80px
-		margin-top: -240px
+		margin-top: -200px
+		&__calc-bg
+			background: #fff url('../img/offer/form-bg-calc.png') no-repeat center right
+			background-size: contain
+		&__price-bg
+			background: #fff url('../img/offer/form-bg-price.png') no-repeat center right
+			background-size: contain
 	&__title
 		font-size: 25px
 		text-transform: uppercase
@@ -15,12 +19,13 @@
 		display: block
 		font-size: 21px
 		margin-bottom: 48px
+		max-width: 800px
 .form
 	&__row
 		display: flex
 		align-items: center
 		max-width: 900px
-		margin-bottom: 25px
+		margin-bottom: 30px
 		&:last-child
 			margin-bottom: 0
 	&__label
@@ -37,30 +42,41 @@
 	&__button
 		height: 80px
 		width: 100%
+	&__policy
+		display: inline-block
+		margin-top: 20px
+		//margin-left: 145px
+		font-size: 17px
+
 @media (max-width: 1199px)
 	.offer
 		&-block
 			background-position: center right -120px
+@media (max-width: 991px)
+	.offer
+		&-block
+			background: none
+			background-color: #fff
+			padding: 40px
 @media (max-width: 768px)
-		.offer
-			&-block
-				background: none
-				background-color: #fff
-				padding: 40px
-			&__title
-				font-size: 18px
-			&__subtitle
-				font-size: 16px
-.form
-	&__row
-		flex-direction: column
+	.offer
+		&__title
+			font-size: 18px
+		&__subtitle
+			font-size: 16px
+	.form
+		&__row
+			flex-direction: column
 		&-checkbox
 			flex-direction: row
-	&__group
-		flex-basis: 100%
-		width: 100%
-	&__input
-		margin-bottom: 20px
+		&__group
+			flex-basis: 100%
+			width: 100%
+		&__input
+			margin-bottom: 20px
+		&__policy
+			margin-left: 0
+			margin-top: 30px
 @media (max-width: 480px)
 .form
 	&__row
