--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,7 @@ img {
 .form__policy {
   display: inline-block;
   margin-top: 20px;
+  margin-left: 45px;
   font-size: 17px;
 }
 
@@ -665,6 +666,42 @@ img {
 .factory-block__text {
   flex-basis: 50%;
   font-size: 20px;
+}
+
+.contacts {
+  background-color: #f6f7f9;
+}
+.contacts-block {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contacts-block__item {
+  text-align: center;
+}
+.contacts__image {
+  margin-bottom: 25px;
+}
+.contacts__text {
+  font-size: 16px;
+}
+.contacts__link {
+  text-decoration: none;
+  color: #262626;
+}
+.contacts__address {
+  font-style: normal;
+}
+
+@media (max-width: 768px) {
+  .contacts-block__item {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .contacts__address {
+    max-width: 200px;
+    margin: auto;
+  }
 }
 
 
