--- a/sass/blocks/_offer.sass
+++ b/sass/blocks/_offer.sass
@@ -45,7 +45,7 @@
 	&__policy
 		display: inline-block
 		margin-top: 20px
-		//margin-left: 145px
+		margin-left: 45px
 		font-size: 17px
 
 @media (max-width: 1199px)
