--- a/sass/style.sass
+++ b/sass/style.sass
@@ -28,6 +28,10 @@
 @import 'blocks/reviews'
 //factory block
 @import 'blocks/factory'
-//factory block
+//contacts block
 @import 'blocks/contacts'
+//questions block
+@import 'blocks/questions'
+//footer block
+@import 'blocks/footer'
 
