slider slick- before and after

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,6 +5,8 @@
 //@import 'fonts'
 //Text-color settings
 @import 'colors'
+//slider
+@import 'slick'
 //Interface settings
 @import 'interface'
 
@@ -24,6 +26,8 @@
 @import 'blocks/price'
 //steps block
 @import 'blocks/steps'
+//before block
+@import 'blocks/before'
 //reviews block
 @import 'blocks/reviews'
 //factory block
@@ -34,4 +38,5 @@
 @import 'blocks/questions'
 //footer block
 @import 'blocks/footer'
+
 
