--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -19,7 +19,7 @@ img
   font-size: 12px
   text-transform: uppercase
   color: $primary
-  font-family: 'Proxima Nova Semibold', sans-serif
+  font-family: 'ProximaNova Semibold', sans-serif
   background-color: #fff
 .button
   text-decoration: none
@@ -51,6 +51,44 @@ img
   display: none
   &:checked + label:before
       background-color: $primary
+.select
+  height: 80px
+  width: 100%
+  padding-left: 30px 
+  border: 1px solid #dddddd
+  position: relative
+  &:after
+    content: ''
+    position: absolute
+    z-index: 9
+    top: 50%
+    transform: translateY(-50%)
+    right: 20px
+    width: 20px
+    height: 20px
+    background: url('../img/caret.png') no-repeat center
+    background-size: 100%
+    &:hover
+      cursor: pointer
+  &_checked
+    line-height: 80px
+    padding-left: 30px
+  &__dropdown 
+    position: absolute
+    top: 80px
+    width: 100%
+    background-color: #fff
+    border: 1px solid #dddddd
+    margin: 0
+    list-style: none
+    padding: 0
+    display: none
+    &_open
+      display: block
+  &__option
+      padding: 20px
+      &:hover
+        background-color: $bg-secondary
 .checkbox
   &-label
     display: flex
