--- a/sass/blocks/_catalog.sass
+++ b/sass/blocks/_catalog.sass
@@ -10,6 +10,11 @@
 		max-width: 570px
 		position: relative
 		box-shadow: 7px 5px 21px rgba(0, 0, 0, 0.1)
+		overflow-y: hidden
+		&:hover
+			.catalog-card__buttons
+				transform: translateY(0)
+				opacity: 1
 		&__tag
 			position: absolute
 			padding: 10px
@@ -24,6 +29,9 @@
 			position: absolute
 			bottom: 0
 			right: 0
+			transition: 0.2s
+			opacity: 0
+			transform: translateY(100%)
 		&__button
 			font-size: 11px
 			border: none
@@ -32,6 +40,8 @@
 			height: 30px
 		&__image
 			display: block
+			height: 379px
+			width: 570px
 	&__link
 		text-align: center
 		margin-top: 60px
