--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -2,7 +2,7 @@
 	background-color: #f5f6f8
 	&-slider
 		display: flex
-		//flex-wrap: wrap
+		flex-wrap: wrap
 		justify-content: space-between
 		&__item
 			text-align: center
@@ -31,5 +31,15 @@
 				height: 10px
 				border: 10px solid transparent
 				border-top: 20px solid #fff
+@media (max-width: 768px)
+.reviews
+	&-slider
+		width: 100%
+@media (max-width: 464px)
+.reviews
+	&-slider
+		width: 100%
+
+
 
 
