--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -61,6 +61,11 @@
 		border-left: 1px solid rgba(#510bba, 0.1)
 		height: 80px
 		width: 70px
+
+		&:hover
+			cursor: pointer
+		&:focus
+			outline: none
 		&__line
 			display: block
 			width: 20px
